tests/parsing/invalid/argument_order/bus.fbd
type my_bus(a=1, b=2, c=3) bus
	masters = a

main my_bus(c=2, 1)
